<resources>
    <string name="app_name">ID</string>
    <string name="nic">NIC</string>
    <string name="reg_no">Reg_No</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="share">share</string>
    <string name="signature">Signature</string>
    <string name="barcode">Barcode</string>
    <string name="imagelink">ImageLink</string>
    <string name="qrcode">Qrcode</string>
    <string name="emaillayout">E-Mail</string>
    <string name="backround">backround</string>
    <string name="corner">corner</string>
    <string name="welcomed_screen_pic">welcomed screen pic</string>
</resources>
